[gd_scene load_steps=2 format=2]

[ext_resource path="res://components/game/card/CardComponent.gd" type="Script" id=1]

[node name="CardComponent" type="Node2D"]
script = ExtResource( 1 )

[node name="CardContainer" type="Node2D" parent="."]

[node name="RevealTween" type="Tween" parent="."]

[node name="ScaleTween" type="Tween" parent="."]
